Test Org - Speridian/src/objects/Pause_Flow__c.object
<CustomObject>
    <fields>
        <fullName>Chapter_Component__c</fullName>
        <label>Chapter_Component</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_number__c</fullName>
        <label>Sequence_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Flow__c</fullName>
        <label>Task Flow</label>
        <referenceTo>BA_Task_Flow__c</referenceTo>
        <relationshipLabel>Pause Flows</relationshipLabel>
        <relationshipName>Pause_Flows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Pause Flow</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pause Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pause Flows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>